--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -8,7 +8,7 @@
     android:paddingRight="0dp"
     android:paddingTop="1dp"
     android:paddingBottom="0dp"
-    tools:context=".GameActivity"
+    tools:context=".game.GameActivity"
     android:background="@android:color/black"
     android:gravity="center"
     android:orientation="horizontal">
