--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,35 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/colorToolBar_AppTheme</item>
+        <item name="colorPrimaryDark">@color/colorStatusBar_AppTheme</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:colorBackground">@color/black</item>
+        <item name="android:windowBackground">@color/windowBackground</item>
+        <item name="android:colorBackground">@android:color/background_dark</item>
     </style>
 
-    <style name="PiniDarkTheme" parent="@style/Theme.AppCompat.NoActionBar" >
-        <item name="android:colorBackground">@android:color/black</item>
+    <style name="AppTheme_ToolBar" parent="Base.Theme.AppCompat">
+        <item name="colorPrimary">@color/colorToolBar_AppThemeToolBar</item>
+        <item name="colorPrimaryDark">@color/colorStatusBar_AppThemeToolBar</item>
+        <item name="android:windowBackground">@color/windowBackground</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="AppThemeFullScreen" parent="Base.Theme.AppCompat">
+        <item name="colorPrimary">@color/colorToolBar_AppTheme</item>
+        <item name="colorPrimaryDark">@color/colorStatusBar_AppTheme</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/windowBackground</item>
+        <item name="android:colorBackground">@android:color/background_dark</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="ColorButton_Menu" parent="Base.Theme.AppCompat">
+        <item name="colorControlHighlight">@color/colorButtonHighlight</item>
+        <item name="colorButtonNormal">@color/colorButton</item>
     </style>
 
 </resources>
